@@ -13,3 +13,4 @@ v 0.0.1 (unreleased)
 * Add a LICENSE file (jvanbaarsen)
 * Load gravatars over SSL (jvanbaarsen)
 * Ensure Healthcheck page has proper styling (jvanbaarsen)
+* Don't schedule backups when the server is marked as down (jvanbaarsen)
